--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,35 +5,29 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
     <ion-navbar color="primary">
-      <ion-title>Login</ion-title>
+        <ion-title>Login</ion-title>
     </ion-navbar>
-  
-  </ion-header>
-  
-  
-  <ion-content padding>
-  
+</ion-header>
+
+
+<ion-content padding>
     <form [formGroup]="loginForm" (submit)="loginUser()" novalidate>
-  
-      <ion-item padding>
-        <ion-label floating>Email</ion-label>
-        <ion-input formControlName="email" type="email"></ion-input>
-      </ion-item>
-  
-      <ion-item padding>
-        <ion-label floating>Password</ion-label>
-        <ion-input formControlName="password" type="password"></ion-input>
-      </ion-item>
-  
-      <button ion-button block type="submit" [disabled]="!loginForm.valid">
-        Login
-      </button>
+        <ion-item padding>
+            <ion-label floating>Email</ion-label>
+            <ion-input formControlName="email" type="email"></ion-input>
+        </ion-item>
+        <ion-item padding>
+            <ion-label floating>Password</ion-label>
+            <ion-input formControlName="password" type="password"></ion-input>
+        </ion-item>
+        <button ion-button block type="submit" [disabled]="!loginForm.valid">
+            Login
+        </button>
     </form>
-  
-    <button ion-button block clear (click)="signupUser()" [disabled]="!loginForm.valid">
-      Create a new account
+
+    <button ion-button block clear (click)="signUpUser()" [disabled]="!loginForm.valid">
+        Create a new account
     </button>
-  </ion-content>
+</ion-content>
   
