--- a/src/pages/todo/todo.html
+++ b/src/pages/todo/todo.html
@@ -5,29 +5,28 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
     <ion-navbar>
         <ion-title>Your ToDo</ion-title>
     </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
-
     <ion-list>
-
+        <ion-item>
+            <ion-label>Title:</ion-label>
+            <ion-input type="text" required #titleView [(ngModel)]="title"></ion-input>
+        </ion-item>
         <ion-item>
             <ion-label>Date:</ion-label>
-            <ion-input type="text" required #todoD [(ngModel)]="todoDate"></ion-input>
+            <ion-input type="text" required #todoDateView [(ngModel)]="todoDate"></ion-input>
         </ion-item>
-
-        <ion-item>
-            <ion-label>Note:</ion-label>
-            <ion-input type="text" required #descriptionView [(ngModel)]="description"></ion-input>
-        </ion-item>
-
     </ion-list>
+
+    <ion-label>Description:</ion-label>
+    <ion-item>
+        <ion-textarea id="todo-description" #descriptionView [(ngModel)]="description"></ion-textarea>
+    </ion-item>
 
     <button ion-button color="danger" type="reset" (click)="clearUserInput()">Delete</button>
     <button ion-button id="saveButton" color="secondary" (click)="saveUserInput()">Save</button>
