--- a/src/pages/tasks/tasks.html
+++ b/src/pages/tasks/tasks.html
@@ -13,25 +13,23 @@
 
 <ion-content padding>
     <ion-list>
-        <ion-card>
-            <ion-item-sliding *ngFor="let client of clientList | async">
-                <ion-item tappable>
-                    <h2>{{client.todo.title}}</h2>
-                </ion-item>
-                <ion-item-options side="right">
-                    <button ion-button color="light" (click)="getTodoInfo()">
-                        <ion-icon name="information-circle"></ion-icon>
-                    </button>
-                </ion-item-options>
-                <ion-item *ngIf="showTodoInfo">
-                    <ion-label>Date:</ion-label>
-                    <ion-input type="text" required [(ngModel)]="client.todo.date"></ion-input>
-                </ion-item>
-                <ion-label *ngIf="showTodoInfo">Description:</ion-label>
-                <ion-item *ngIf="showTodoInfo">
-                    <ion-textarea id="todo-description" [(ngModel)]="client.todo.description"></ion-textarea>
-                </ion-item>
-            </ion-item-sliding>
-        </ion-card>
+        <ion-item-sliding *ngFor="let client of clientList | async">
+            <button ion-item tappable>
+                <h2>{{client.todo.title}}</h2>
+            </button>
+            <ion-item-options side="right">
+                <button ion-button color="light" (click)="getTodoInfo()">
+                    <ion-icon name="information-circle"></ion-icon>
+                </button>
+            </ion-item-options>
+            <ion-item *ngIf="showTodoInfo">
+                <ion-label>Date:</ion-label>
+                <ion-input type="text" required [(ngModel)]="client.todo.date"></ion-input>
+            </ion-item>
+            <ion-label *ngIf="showTodoInfo">Description:</ion-label>
+            <ion-item *ngIf="showTodoInfo">
+                <ion-textarea id="todo-description" [(ngModel)]="client.todo.description"></ion-textarea>
+            </ion-item>
+        </ion-item-sliding>
     </ion-list>
 </ion-content>
