bugfixes - setClientData, markerReload,interval added to infoModal

--- a/src/pages/modalinfo/modalinfo.html
+++ b/src/pages/modalinfo/modalinfo.html
@@ -25,7 +25,7 @@
         <ion-list-header>
             Choosen time Interval:
         </ion-list-header>
-        <ion-badge item-start> {{this.clientsProvider.clientData.interval}}</ion-badge>
+        <ion-badge > {{this.clientsProvider.clientData.interval}}</ion-badge>
 
     </ion-list>
 
